Tue Sep  9 05:48:42 2014  Eric Wong  <e@80x24.org>

	* symbol.c (rb_intern_cstr_without_pindown): check dsymbol on return
	  This is not a complete fix for bug 10206, but seems to reduce
	  that crash and also looks correct.

Tue Sep  9 04:36:24 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (rb_env_t): use flexible array
	  This reduces allocations and speeds up the lambda calculus
	  fizzbuzz (bm_app_lc_fizzbuzz.rb) benchmark [ruby-core:64858]
	* proc.c (get_local_variable_ptr): deconst to adjust for flex array
	* vm.c (env_mark, env_free, env_memsize): remove check for env->env
	* vm.c (env_alloc): single allocation for flex array
	* vm.c (vm_make_env_each): adjust env_alloc call

Mon Sep  8 16:08:22 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_app_lc_fizzbuzz.rb: should skip output on benchmark.

Mon Sep  8 16:04:02 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_app_lc_fizzbuzz.rb: `answer.to_a' does not return
	  a string, but an array.

Mon Sep  8 13:18:37 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_app_lc_fizzbuzz.rb: added.

	  This program is described closely in "Understanding Computation"
	  chapter 6 by Tom Stuart. <http://computationbook.com/>

	  Japanese translation will be published soon.
	  <http://www.oreilly.co.jp/books/9784873116976/>

Mon Sep  8 12:01:39 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add incremental GC algorithm. [Feature #10137]

	  Please refer this ticket for details.

	  This change also introduces the following changes.

	  * Remove RGENGC_AGE2_PROMOTION and introduce object age (0 to 3).
	    Age can be count with FL_PROMOTE0 and FL_PROMOTE1 flags in
	    RBasic::flags (2 bit). Age == 3 objects become old objects.
	  * WB_PROTECTED flag in RBasic to WB_UNPROTECTED bitmap.
	  * LONG_LIVED bitmap to represent living objects while minor GCs
	    It specifies (1) Old objects and (2) remembered shady objects.
	  * Introduce rb_objspace_t::marked_objects which counts marked